# medical_doc_analyze

./: .gitignore  README.md  clinical_state_design.md  main.py  pyproject.toml  run_pipeline.py
docs/: plan.md
src/agents/: orchestrator.py  synthesizer.py
src/agents/builders/: __init__.py  admission_details_builder.py  base_builder.py  diagnoses_builder.py  discharge_status_builder.py  follow_up_builder.py  hospital_course_builder.py  investigations_builder.py  medications_builder.py  patient_details_builder.py  procedures_builder.py
src/agents/prompts/: __init__.py  admission_details_prompt.py  common.py  diagnoses_prompt.py  discharge_status_prompt.py  follow_up_prompt.py  hospital_course_prompt.py  investigations_prompt.py  medications_prompt.py  patient_details_prompt.py  procedures_prompt.py
src/agents/utils/: __init__.py  conflict_detector.py  evidence_factory.py  llm_client.py  section_status_calculator.py
src/extraction/: pdf_processor.py  vlm_extractor.py
src/schemas/: __init__.py  base.py  clinical.py  record.py  state.py
src/storage/: json_writer.py
