[project]
name = "mdocanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.8.0",
    "paddleocr>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
]
